--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,6 @@
-[package]
-name = "lox"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace]
+members = [
+	"lox-interpreter",
+	"lox-vm"
+]
+resolver = "2"
